--- a/Projects/xxdCmdb/web/templates/audit_sa.html
+++ b/Projects/xxdCmdb/web/templates/audit_sa.html
@@ -179,19 +179,26 @@
                   $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().first().attr('onclick', '');
                   $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().first().attr('style', 'color:grey');
               }
-              if(v!='待发布'){
-                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');
-                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');
-              }
+{#              if(v!='待发布'){#}
+{#                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');#}
+{#                  $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');#}
+{#              }#}
               if(v=='发布失败'){
-                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ff9999; margin-top:4px; margin-left:6px; margin-right:-8px')
+                    $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ff9999; margin-top:4px; margin-left:6px; margin-right:-8px');
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().html(' 重新发布');
                 }else if(v=='发布成功'){
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');
                     $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(92,184,92); margin-top:4px; margin-left:6px; margin-right:-8px')
                 }else if(v=='待发布'){
                     $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ffcc99; margin-top:4px; margin-left:6px; margin-right:-8px')
                 }else if(v=='已撤销'){
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');
                     $(this).children().next().next().next().next().next().next().next().next().first().attr('style', '')
                 }else if(v=='发布中'){
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');
+                    $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');
                     $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #99ccff; margin-top:4px; margin-left:6px; margin-right:-8px')
                 }
                 else {
