--- a/Projects/xxdCmdb/web/templates/vpn.html
+++ b/Projects/xxdCmdb/web/templates/vpn.html
@@ -95,9 +95,9 @@
     <div id="modal_delete" class="alert alert-danger alert-dismissible fade in modal-delete hide" role="alert">
         <button type="button" class="close" aria-label="Close" onclick="$.Hide('#shade,#modal_delete');"><span>×</span>
         </button>
-        <h4>确定删除资产？</h4>
+        <h4>确定删除VPN账户？</h4>
 
-        <p>与该资产相关联数据将全部被删除！<br/> &nbsp;</p>
+        <p>彻底删除！<br/> &nbsp;</p>
 
         <p style="text-align: right">
             <button type="button" class="btn btn-danger" id="do_delete_confirm">确定删除</button>
@@ -106,7 +106,7 @@
     </div>
     <!-- 删除层结束 -->
 
-    <!-- 添加业务线开始 -->
+    <!-- 添加vpn账号开始 -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
           <div class="modal-dialog" role="document">
             <div class="modal-content" style="border-radius: 5px">
@@ -130,7 +130,34 @@
             </div>
           </div>
         </div>
-    <!-- 添加业务线开始 -->
+    <!-- 添加vpn账号结束 -->
+
+    <!-- 更改vpn密码开始 -->
+    <div class="modal fade" id="change" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content" style="border-radius: 5px">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">更改密码</h4>
+              </div>
+              <form id="form1">
+              <div class="modal-body">
+                  <div class="form-group">
+                    <label for="recipient-name" class="control-label">新密码</label>
+                    <input type="text" class="form-control" id="new_pwd">
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <span id="error_message" style="color: red;"></span>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                  <button id="commit_change" type="button" class="btn btn-primary">更新</button>
+              </div>
+            </form>
+            </div>
+          </div>
+        </div>
+    <!-- 更改vpn密码结束 -->
+
 
     <!-- 遮罩层开始 -->
     <div id='shade' class='shade hide'></div>
@@ -151,7 +178,68 @@
         $(function () {
             $.initMenu('#menu_vpn');
             $.nbDataList('/vpns.html', '1');
+            window.setTimeout(add_style, 200);
         });
+
+        function add_style() {
+            $('#table_body').children().each(function () {
+                var status = $(this).children().next().next().next().html();
+                var s = $(this).children().next().next().next().next().next().children().next().next().next().html();
+                if(status=='正常'){
+                    $(this).children().next().next().next().first().html("<img style='margin-top: -1.5px' src='/static/imgs/dot.png'> 正常")
+                }else{
+                    $(this).children().next().next().next().first().html("<img style='margin-top: -1.5px' src='/static/imgs/dot_1.png'> 冻结");
+                    $(this).children().next().next().next().next().next().children().next().next().next().html(' 账号解封');
+
+                }
+            })
+        }
+
+        function change_pwd(id) {
+            $('#change').modal();
+            $('#commit_change').click(function () {
+                var new_pwd = $('#new_pwd').val();
+                if(new_pwd.length == 0){
+                    alert('密码不能为空');
+                    return false;
+                }
+                if(new_pwd.length < 8){
+                    alert('密码长度不能小于8位');
+                    return false;
+                }
+                $.ajax({
+                url: '/vpns.html',
+                type: 'POST',
+                data: {'new_pwd': new_pwd, 'id': id},
+                dataType: 'JSON',
+                success: function (response) {
+                    if (response.status){
+                        $('#change').hide();
+                        alert(response.message);
+                    }else{
+                        alert(response.message)
+                    }
+                }
+                })
+            })
+        }
+
+        function cancle_account(id) {
+            $.ajax({
+                url: '/vpns.html',
+                type: 'POST',
+                data: {'cancle_id': id},
+                dataType: 'JSON',
+                success: function (response) {
+                    if (response.status){
+                        $('#change').hide();
+                        location.reload();
+                    }else{
+                        alert(response.message)
+                    }
+                }
+                })
+        }
 
         function ChangePage(id) {
             $.nbDataLists(id);
@@ -169,7 +257,10 @@
                 success: function (response) {
                     if (response.status){
                         $('#exampleModal').hide();
+                        alert(response.message);
+                        location.reload();
                     } else {
+                        alert(response.message)
                     }
                 }
                 })
