--- a/Projects/xxdCmdb/web/templates/audit_sa.html
+++ b/Projects/xxdCmdb/web/templates/audit_sa.html
@@ -190,6 +190,7 @@
                     $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('onclick', '');
                     $(this).children().next().next().next().next().next().next().next().next().next().next().children().next().next().next().first().attr('style', 'color:grey');
                     $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: rgb(92,184,92); margin-top:4px; margin-left:6px; margin-right:-8px')
+{#                    $(this).children().next().next().next().next().next().next().next().next().first().css('color', 'green')#}
                 }else if(v=='待发布'){
                     $(this).children().next().next().next().next().next().next().next().next().first().attr('style', 'display: inline-block; padding: 3px; background-color: #ffcc99; margin-top:4px; margin-left:6px; margin-right:-8px')
                 }else if(v=='已撤销'){
