--- a/Projects/xxdCmdb/web/templates/vpn.html
+++ b/Projects/xxdCmdb/web/templates/vpn.html
@@ -124,7 +124,7 @@
               <div class="modal-footer">
                   <span id="error_message" style="color: red;"></span>
                   <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                  <button id="commit_add" type="button" class="btn btn-primary">保存</button>
+                  <button id="commit_add" type="button" class="btn btn-primary">提交</button>
               </div>
             </form>
             </div>
