--- a/Projects/xxdCmdb/web/templates/layout/_layconfig.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layconfig.html
@@ -18,65 +18,10 @@
 </div>
 <div class="pg-body">
     <div class="menu">
-        <a id="menu_asset" class="menu-item" href="/asset.html">
-            <i class="fa fa-connectdevelop" aria-hidden="true"></i>
-            <span>资产管理</span>
-        </a>
-        <a id="menu_auth" class="menu-item" href="/authorize.html">
-            <i class="fa fa-cogs" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
-            <span>权限管理</span>
-        </a>
-        <a id="menu_user_profile" class="menu-item" href="/user.html">
-            <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
-            <span>用户管理</span>
-        </a>
-        <a id="menu_group_profile" class="menu-item" href="/group.html">
-            <i class="fa fa-users" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
-            <span>群组管理</span>
-        </a>
-        <a id="menu_create" class="menu-item" href="/_project.html">
-            <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>项目创建</span>
-        </a>
-        <a id="menu_list" class="menu-item" href="/project_admin.html">
-            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>项目列表</span>
-        </a>
-        <a id="menu_online" class="menu-item" href="/release.html">
-            <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>上线记录</span>
-        </a>
-        <a id="menu_vpn" class="menu-item" href="/vpn.html">
-            <i class="fa fa-podcast" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>vpn 账号</span>
-        </a>
-        <a id="menu_config" class="menu-item" href="/config.html">
+        <a id="menu_config" class="menu-item" href="/pre_production_config.html">
             <i class="fa fa-cog" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>配置修改</span>
         </a>
-        <a class="menu-item" href="/read.html">
-            <i class="fa fa-map-o" aria-hidden="true"></i>
-            <span>资产查询</span>
-        </a>
-        <a class="menu-item" id="business" style="cursor:pointer">
-            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
-            <span>业务管理</span>
-            <i id="business_icn" style="margin-left: 50px" class="fa fa-chevron-down" aria-hidden="true"></i>
-        </a>
-        <div style="display: none" id="show_bussiness">
-        <a class="menu-item" id="business" style="cursor:pointer" href="/business_1.html">
-            <i class="fa fa-caret-right" aria-hidden="true"></i>
-            <span>业务线一</span>
-        </a>
-        <a class="menu-item" id="business" style="cursor:pointer" href="/business_2.html">
-            <i class="fa fa-caret-right" aria-hidden="true"></i>
-            <span>业务线二</span>
-        </a>
-        <a class="menu-item" id="business" style="cursor:pointer" href="/business_3.html">
-            <i class="fa fa-caret-right" aria-hidden="true"></i>
-            <span>业务线三</span>
-        </a>
-        </div>
 
         <ul class="tree" style="margin-left: -25px">
 
