--- a/Projects/xxdCmdb/web/templates/project.html
+++ b/Projects/xxdCmdb/web/templates/project.html
@@ -194,11 +194,11 @@
             if(obj_type=='2'){
                 $('#jdk_div').attr('style', 'display: none;');
                 $('#mvn_div').attr('style', 'display: none;');
-                $('#static_div').attr('style', 'display:margin-left: 100px; float: left')
+                $('#static_div').attr('style', 'display:margin-left: 100px; float: left');
             }else if(obj_type=='1'){
                 $('#jdk_div').attr('style', 'float: left;');
                 $('#mvn_div').attr('style', 'display: inline-block; margin-left: 100px; float: left');
-                $('#static_div').attr('style', 'display: none;')
+                $('#static_div').attr('style', 'display: none;');
             }else if(obj_type=='3'){
                 $('#port_div').attr('style', '');
                 $('#width_div').attr('style', 'width: 10000px; height: 20px');
