--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -41,10 +41,6 @@
         <div id="user_menu">
 
         </div>
-{#        <a id="menu_audit" class="menu-item" href="/audit.html">#}
-{#            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
-{#            <span>P M 审核</span>#}
-{#        </a>#}
 {#        <a id="menu_audit_db" class="menu-item" href="/audit_db.html">#}
 {#            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
 {#            <span>D B 审核</span>#}
@@ -69,10 +65,10 @@
 {#            <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
 {#            <span>发布记录</span>#}
 {#        </a>#}
-{#        <a id="menu_search" class="menu-item" href="#">#}
-{#            <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>#}
-{#            <span>上线日志</span>#}
-{#        </a>#}
+        <a id="menu_url" class="menu-item" href="/env_url.html">
+            <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>环境接口</span>
+        </a>
 {#        <ul class="tree" style="margin-left: -25px"></ul>#}
     </div>
     <div class="content">
