--- a/Projects/xxdCmdb/web/templates/env_list.html
+++ b/Projects/xxdCmdb/web/templates/env_list.html
@@ -1,80 +1,86 @@
 {% extends 'layout/_layread.html' %}
 
 {% block css %}
+    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
 
+<style>
+    .guige {
 
+    }
+
+    .guige-table {
+        width: 100%;
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+    .guige-table .title {
+        background: #f5fafe;
+        text-align: left;
+        font-weight: bold;
+        line-height: 32px;
+        height: 32px;
+        font-family: "微软雅黑";
+        border-right: 1px solid #dcdcdc;
+        border-left: 2px solid #0488cd;
+    }
+
+    .guige-table td, .content .guige-table th {
+        border: 1px solid #dcdcdc;
+        line-height: 30px;
+        height: 30px;
+        padding: 0 10px;
+        border-top: 0;
+    }
+
+    .guige-table .body-left {
+        width: 126px;
+        font-weight: normal;
+        text-align: right;
+        color: #666;
+    }
+
+    .guige-table .body-right {
+        color: #333;
+    }
+
+</style>
 {% endblock %}
 
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <li><a href="/cmdb.html">首页</a></li>
-        <li class="active">资产管理</li>
+        <li class="active">环境平台查询</li>
     </ol>
-    <div style="padding: 5px 8px;">
+        <table class="guige-table">
+            <tbody>
 
-        <div class="list-block">
-            <div class="clearfix search-area">
+            <tr>
+                <th colspan="5" class="title f14 th" style="border-left:2px solid #0488cd;">
+                    <span class="padding-l-8">选择业务线 </span>
+                </th>
+            </tr>
+            </tbody>
+        </table>
 
-                <div class="col-md-offset-10 do-submit">
-                    <a id="search_condition_submit" class="btn btn-primary no-radius">
-                        <i class="fa fa-search"></i> 搜索
-                    </a>
-                </div>
+    <select id="business_2" class="selectpicker" style="width: 700px" onchange="get_env()">
+        {% for item in business_two_list %}
+            <option id="recipient-name" value={{ item.id }}>{{ item.name }}</option>
+        {% endfor %}
+    </select>
 
-                <div id="search_conditions" class="col-md-offset-2 col-md-8">
-                    <div class="condition">
-                        <div class="icons">
-                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i
-                                    class="fa fa-plus-square"></i></a>
-                        </div>
-                        <div class="inputs">
-                            <div class="input-group">
-                                <div id="search_condition" init="false" class="input-group-btn">
-                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>
-                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
-                                    <ul class="change-search-condition dropdown-menu">
+    <table class="guige-table">
+            <tbody>
 
-                                    </ul>
-                                </div>
+            <tr>
+                <th colspan="5" class="title f14 th" style="border-left:2px solid #0488cd;">
+                    <span class="padding-l-8">环境接口 </span>
+                </th>
+            </tr>
+            </tbody>
+        </table>
 
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="table-responsive table-area">
-
-                <table class="table table-striped table-bordered">
-
-                    <!-- 表格标题开始 -->
-                    <thead id="table_head">
-                    <tr>
-
-                    </tr>
-                    </thead>
-                    <!-- 表格标题结束 -->
-
-                    <!-- 表格内容开始 -->
-                    <tbody id="table_body" edit-mode='false'>
-
-                    </tbody>
-                    <!-- 表格内容结束 -->
-
-                </table>
-                <div class="clearfix">
-                    <div class="right">
-                        <ul id="pager" class="pagination pagination-sm no-margin">
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
+    <textarea id="business_text" style="width: 700px; height: 300px"></textarea>
 
     <!-- 删除层开始 -->
     <div id="modal_delete" class="alert alert-danger alert-dismissible fade in modal-delete hide" role="alert">
@@ -105,6 +111,7 @@
     <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
     <script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="/static/js/nb-list2.js"></script>
+    <script src="/static/js/bootstrap-select.js"></script>
 
     <script>
         $(function () {
@@ -130,6 +137,23 @@
                 if(remark == 'null'){
                     $(this).children().next().next().next().first().html('');
                 }
+            })
+        }
+
+        function get_env() {
+            var business_id = $('#business_2').selectpicker('val');
+            $.ajax({
+                    url: '/env_urls.html',
+                    type: 'POST',
+                    data: {'get_id': business_id},
+                    dataType: 'JSON',
+                    success: function (response) {
+                        if(response.status){
+                            $('#business_text').val(response.data.business_remark)
+                        }else {
+                            alert('读取接口地址失败..')
+                        }
+                    }
             })
         }
     </script>
