--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -67,7 +67,7 @@
 {#        </a>#}
         <a id="menu_url" class="menu-item" href="/env_url.html">
             <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>环境接口</span>
+            <span>环境查询</span>
         </a>
 {#        <ul class="tree" style="margin-left: -25px"></ul>#}
     </div>
