--- a/Projects/xxdCmdb/web/templates/env_list.html
+++ b/Projects/xxdCmdb/web/templates/env_list.html
@@ -80,7 +80,7 @@
             </tbody>
         </table>
 
-    <textarea id="business_text" style="width: 700px; height: 300px"></textarea>
+    <textarea id="business_text" style="width: 100%; height: 100%"></textarea>
 
     <!-- 删除层开始 -->
     <div id="modal_delete" class="alert alert-danger alert-dismissible fade in modal-delete hide" role="alert">
