--- a/Projects/cmdb/AutoCmdb/web/templates/asset_list.html
+++ b/Projects/cmdb/AutoCmdb/web/templates/asset_list.html
@@ -130,6 +130,10 @@
             $.nbDataList('/assets.html');
         });
 
+        function ChangePage(id) {
+                $.nbDataList('/assets.html', id);
+            }
+
 
     </script>
 {% endblock %}
